--- a/Lab01-AIML.ipynb
+++ b/Lab01-AIML.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "## Lab01- Implement basic data structures of Numpy, Pandas, Matplotlib and Access Data from sources \n",
-    "### Dr. Kiran Eranki"
+    "### Harsh Raj Ranjan"
    ]
   },
   {
