--- a/Lab-1_AIML.ipynb
+++ b/Lab-1_AIML.ipynb
@@ -5,7 +5,7 @@
    "id": "b50d918d",
    "metadata": {},
    "source": [
-    "## Lab01- Implement basic data structures of Numpy, Pandas, Matplotlib and Access Data from sources \n",
+    "## Lab01- Implement basic data structures of Numpy, Pandas, Matplotlib and Access Data from sources \n"
    ]
   },
   {
