--- a/Lab-1_AIML.ipynb
+++ b/Lab-1_AIML.ipynb
@@ -13,7 +13,7 @@
    "id": "0128a62e",
    "metadata": {},
    "source": [
-    "### Part 01: Lab Task is implement the following data structures using Numpy and Pandas.**\n",
+    "### Part 01: Lab Task is implement the following data structures using Numpy and Pandas.\n",
     "1. Lists\n",
     "2. Arrays\n",
     "3. Identify their type using type()\n",
