--- a/Lab_3_AIML.ipynb
+++ b/Lab_3_AIML.ipynb
@@ -1,26 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyNiyaPio+v2SKb2kaYCq8rg",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/2303a51105/AIML-2025/blob/main/Lab_3_AIML.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -28,15 +12,20 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Python Libraries required for Game Strategy"
-      ],
       "metadata": {
         "id": "6IzbMLRxV455"
-      }
+      },
+      "source": [
+        "## Python Libraries required for Game Strategy"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "i2SefyUSWPpx"
+      },
+      "outputs": [],
       "source": [
         "import random\n",
         "import math\n",
@@ -44,24 +33,24 @@
         "import functools\n",
         "\n",
         "cache = functools.lru_cache(10**6)\n"
-      ],
-      "metadata": {
-        "id": "i2SefyUSWPpx"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Game Class"
-      ],
       "metadata": {
         "id": "HpLoja9PWZ-b"
-      }
+      },
+      "source": [
+        "## Game Class"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Vis3sOibWd5s"
+      },
+      "outputs": [],
       "source": [
         "class Game:\n",
         "    def actions(self, state):\n",
@@ -79,24 +68,24 @@
         "    def utility(self, state, player):\n",
         "        \"\"\"Return the value of this final state to player.\"\"\"\n",
         "        raise NotImplementedError"
-      ],
-      "metadata": {
-        "id": "Vis3sOibWd5s"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Player Game using the Game Class Constructor"
-      ],
       "metadata": {
         "id": "BstYKz5hXC_Q"
-      }
+      },
+      "source": [
+        "## Player Game using the Game Class Constructor"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "vxA3ED1bXEP_"
+      },
+      "outputs": [],
       "source": [
         "def play_game(game, strategies: dict, verbose=False):\n",
         "    \"\"\"\n",
@@ -114,33 +103,33 @@
         "            print(state)\n",
         "\n",
         "    return state\n"
-      ],
-      "metadata": {
-        "id": "vxA3ED1bXEP_"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Implement the Game Strategy Algorithms."
-      ],
       "metadata": {
         "id": "IaBV3JITZHkd"
-      }
+      },
+      "source": [
+        "## Implement the Game Strategy Algorithms."
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### Implement the MiniMax Search Algorithm"
-      ],
       "metadata": {
         "id": "oRqCYMt3ZiLr"
-      }
+      },
+      "source": [
+        "### Implement the MiniMax Search Algorithm"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "AwbOcuRhZJjC"
+      },
+      "outputs": [],
       "source": [
         "def minimax_search(game, state):\n",
         "    \"\"\"Search game tree to determine best move; return (value, move) pair.\"\"\"\n",
@@ -169,24 +158,24 @@
         "        return v, move\n",
         "\n",
         "    return max_value(state)\n"
-      ],
-      "metadata": {
-        "id": "AwbOcuRhZJjC"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### Implement the Alpha-Beta Search Algorithm"
-      ],
       "metadata": {
         "id": "pJbEHNJJZkSm"
-      }
+      },
+      "source": [
+        "### Implement the Alpha-Beta Search Algorithm"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "4FRHOvC9Zo2g"
+      },
+      "outputs": [],
       "source": [
         "def alphabeta_search(game, state):\n",
         "    \"\"\"Search game tree to determine best action; use alpha-beta pruning.\"\"\"\n",
@@ -219,33 +208,33 @@
         "        return v, move\n",
         "\n",
         "    return max_value(state, -math.inf, math.inf)\n"
-      ],
-      "metadata": {
-        "id": "4FRHOvC9Zo2g"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "##  Implement the Game Strategy using TicTocToe"
-      ],
       "metadata": {
         "id": "WLxGsMf6ZwGQ"
-      }
+      },
+      "source": [
+        "##  Implement the Game Strategy using TicTocToe"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### Implement TicToCToe game using display constructors"
-      ],
       "metadata": {
         "id": "imbsOyHhZy2r"
-      }
+      },
+      "source": [
+        "### Implement TicToCToe game using display constructors"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "p158PLXkZ1cE"
+      },
+      "outputs": [],
       "source": [
         "class TicTacToe(Game):\n",
         "    \"\"\"Play TicTacToe on a 'height' by 'width' board, needing 'k' in a row to win.\n",
@@ -288,24 +277,24 @@
         "            in_row(*square, dx, dy) + in_row(*square, -dx, -dy) - 1 >= k\n",
         "            for (dx, dy) in [(0, 1), (1, 0), (1, 1), (1, -1)]\n",
         "        )\n"
-      ],
-      "metadata": {
-        "id": "p158PLXkZ1cE"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### Implement a Game Board using defaultdict using _init_ , _new_, _missing_, _hash_, _repr_"
-      ],
       "metadata": {
         "id": "SmlBfM8zZ5sJ"
-      }
+      },
+      "source": [
+        "### Implement a Game Board using defaultdict using _init_ , _new_, _missing_, _hash_, _repr_"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "EOgoFwWnaHsg"
+      },
+      "outputs": [],
       "source": [
         "class Board(defaultdict):\n",
         "    \"\"\"A board has the player to move, a cached utility value,\n",
@@ -338,24 +327,24 @@
         "        def row(y):\n",
         "            return ' '.join(self[x, y] for x in range(self['width']))\n",
         "        return '\\n'.join(map(row, range(self['height']))) + '\\n'\n"
-      ],
-      "metadata": {
-        "id": "EOgoFwWnaHsg"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### Implement random player(game,state) and player(search algorithm)"
-      ],
       "metadata": {
         "id": "CkEgRPSzaKLp"
-      }
+      },
+      "source": [
+        "### Implement random player(game,state) and player(search algorithm)"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "AlSC-21CaMop"
+      },
+      "outputs": [],
       "source": [
         "def random_player(game, state):\n",
         "    \"\"\"A player that selects a random valid action.\"\"\"\n",
@@ -364,50 +353,32 @@
         "def player(search_algorithm):\n",
         "    \"\"\"A game player who uses the specified search algorithm.\"\"\"\n",
         "    return lambda game, state: search_algorithm(game, state)[1]\n"
-      ],
-      "metadata": {
-        "id": "AlSC-21CaMop"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Evaluate the AI Game Strategy using TicTocToe"
-      ],
       "metadata": {
         "id": "aYypd2CroNMV"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "play_game(TicTacToe(), dict(X=player(alphabeta_search),O=player(minimax_search)), verbose=True).utility"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 263
-        },
-        "id": "uNPV8pkQoO4G",
-        "outputId": "a1f83ef2-6219-4cdf-94a9-950cdac59559"
       },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "AttributeError",
-          "evalue": "'Board' object has no attribute 'to_move'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-11-a96229f34753>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mplay_game\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mTicTacToe\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mplayer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0malphabeta_search\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mO\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mplayer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mminimax_search\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mutility\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m<ipython-input-3-e44a7e83585c>\u001b[0m in \u001b[0;36mplay_game\u001b[0;34m(game, strategies, verbose)\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0mstate\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgame\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minitial\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0;32mwhile\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mgame\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mis_terminal\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstate\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m         \u001b[0mplayer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstate\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_move\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m         \u001b[0mmove\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstrategies\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mplayer\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgame\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstate\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m         \u001b[0mstate\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgame\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstate\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmove\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mAttributeError\u001b[0m: 'Board' object has no attribute 'to_move'"
-          ]
-        }
+      "source": [
+        "## Evaluate the AI Game Strategy using TicTocToe"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyNiyaPio+v2SKb2kaYCq8rg",
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
