Lab-4_AIML.ipynb

--- a/Lab-4_AIML.ipynb
+++ b/Lab-4_AIML.ipynb
@@ -462,7 +462,7 @@
     {
       "cell_type": "code",
       "source": [
-        "numeric_df = df.select_dtypes(include=['float64', 'int64'])\n",
+        "numeric_df = df.select_dtypes(include=['float64', 'int64'])\n #h",
         "corr_matrix = numeric_df.corr()"
       ],
       "metadata": {
