Lab-2_AIML.ipynb

--- a/Lab-2_AIML.ipynb
+++ b/Lab-2_AIML.ipynb
@@ -2,6 +2,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/harshr-r/AIML-2025/blob/main/Lab-2_AIML.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "5a5a219b",
       "metadata": {
         "id": "5a5a219b"
@@ -23,7 +33,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "id": "4e14d60d",
       "metadata": {
         "id": "4e14d60d"
@@ -35,11 +45,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "id": "ccda0729",
       "metadata": {
         "id": "ccda0729",
-        "outputId": "b65d893e-68ac-4b2a-921e-d9b4ab5ff5cd",
+        "outputId": "f7276d1d-bf19-485d-b15a-88c1136254c5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -66,11 +76,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "id": "e0e0ce90",
       "metadata": {
         "id": "e0e0ce90",
-        "outputId": "229b67de-dd1e-420a-dd64-68d60fd0e631",
+        "outputId": "2d57b7dc-4ab5-4515-d944-1d4b8a3f0af4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -116,11 +126,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "id": "595e8c5b",
       "metadata": {
         "id": "595e8c5b",
-        "outputId": "61795c4e-32e6-4d2f-9199-b72f52152483",
+        "outputId": "23e57bbb-83c5-4e75-f486-96706021340d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -152,16 +162,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "id": "d0129407",
       "metadata": {
         "id": "d0129407",
-        "outputId": "e420e696-7db7-4719-a7da-23e9ec78fbb5"
+        "outputId": "7aa48811-fcf2-48cf-acb1-19c3920a7e6e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "['B', 'A', 'C', 'D', 'E', 'F', 'H', 'G']\n"
           ]
@@ -177,6 +190,197 @@
         "\n",
         "visited = dfs(graph1,'B', [])\n",
         "print(visited)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Implementation of A* Algorithm / OR Graph Search"
+      ],
+      "metadata": {
+        "id": "JST9e8vabA17"
+      },
+      "id": "JST9e8vabA17"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from copy import deepcopy\n",
+        "import numpy as np\n",
+        "import time\n",
+        "\n",
+        "def bestsolution(state):\n",
+        "    bestsol = np.array([], int).reshape(-1, 9)\n",
+        "    count = len(state) - 1\n",
+        "    while count != -1:\n",
+        "        bestsol = np.insert(bestsol, 0, state[count]['puzzle'], 0)\n",
+        "        count = (state[count]['parent'])\n",
+        "    return bestsol.reshape(-1, 3, 3)\n",
+        "\n",
+        "\n",
+        "# checks for the uniqueness of the iteration(it).\n",
+        "def all(checkarray):\n",
+        "    set=[]\n",
+        "    for it in set:\n",
+        "        for checkarray in it:\n",
+        "            return 1\n",
+        "        else:\n",
+        "            return 0\n",
+        "\n",
+        "# number of misplaced tiles\n",
+        "def misplaced_tiles(puzzle,goal):\n",
+        "    mscost = np.sum(puzzle != goal) - 1\n",
+        "    return mscost if mscost > 0 else 0\n",
+        "\n",
+        "\n",
+        "def coordinates(puzzle):\n",
+        "    pos = np.array(range(9))\n",
+        "    for p, q in enumerate(puzzle):\n",
+        "        pos[q] = p\n",
+        "    return pos\n",
+        "\n",
+        "# start of 8 puzzle evaluvation, using Misplaced tiles heuristics\n",
+        "def evaluvate_misplaced(puzzle, goal):\n",
+        "    steps = np.array([('up', [0, 1, 2], -3),('down', [6, 7, 8],  3),('left', [0, 3, 6], -1),('right', [2, 5, 8],  1)],\n",
+        "                dtype =  [('move',  str, 1),('position', list),('head', int)])\n",
+        "\n",
+        "    dtstate = [('puzzle',  list),('parent', int),('gn',  int),('hn',  int)]\n",
+        "\n",
+        "    costg = coordinates(goal)\n",
+        "\n",
+        "    # initializing the parent, gn and hn, where hn is misplaced_tiles  function call\n",
+        "    parent = -1\n",
+        "    gn = 0\n",
+        "    hn = misplaced_tiles(coordinates(puzzle), costg)\n",
+        "    state = np.array([(puzzle, parent, gn, hn)], dtstate)\n",
+        "\n",
+        "   #priority queues with position as keys and fn as value.\n",
+        "    dtpriority = [('position', int),('fn', int)]\n",
+        "\n",
+        "    priority = np.array([(0, hn)], dtpriority)\n",
+        "    while 1:\n",
+        "        priority = np.sort(priority, kind='mergesort', order=['fn', 'position'])\n",
+        "        position, fn = priority[0]\n",
+        "        # sort priority queue using merge sort,the first element is picked for exploring.\n",
+        "        priority = np.delete(priority, 0, 0)\n",
+        "        puzzle, parent, gn, hn = state[position]\n",
+        "        puzzle = np.array(puzzle)\n",
+        "\n",
+        "        blank = int(np.where(puzzle == 0)[0][0])\n",
+        "\n",
+        "        gn = gn + 1\n",
+        "        c = 1\n",
+        "        start_time = time.time()\n",
+        "        for s in steps:\n",
+        "            c = c + 1\n",
+        "            if blank not in s['position']:\n",
+        "                openstates = deepcopy(puzzle)\n",
+        "                openstates[blank], openstates[blank + s['head']] = openstates[blank + s['head']], openstates[blank]\n",
+        "\n",
+        "                if ~(np.all(list(state['puzzle']) == openstates, 1)).any():\n",
+        "                    end_time = time.time()\n",
+        "                    if (( end_time - start_time ) > 2):\n",
+        "                        print(\" The 8 puzzle is unsolvable \\n\")\n",
+        "                        break\n",
+        "\n",
+        "                    hn = misplaced_tiles(coordinates(openstates), costg)\n",
+        "                    # generate and add new state in the list\n",
+        "                    q = np.array([(openstates, position, gn, hn)], dtstate)\n",
+        "                    state = np.append(state, q, 0)\n",
+        "                    # f(n) is the sum of cost to reach node\n",
+        "                    fn = gn + hn\n",
+        "\n",
+        "                    q = np.array([(len(state) - 1, fn)], dtpriority)\n",
+        "                    priority = np.append(priority, q, 0)\n",
+        "\n",
+        "\n",
+        "                    if np.array_equal(openstates, goal):\n",
+        "                        print(' The 8 puzzle is solvable \\n')\n",
+        "                        return state, len(priority)\n",
+        "\n",
+        "    return state, len(priority)\n",
+        "\n",
+        "\n",
+        "# initial state\n",
+        "puzzle = []\n",
+        "\n",
+        "puzzle.append(2)\n",
+        "puzzle.append(8)\n",
+        "puzzle.append(3)\n",
+        "puzzle.append(1)\n",
+        "puzzle.append(6)\n",
+        "puzzle.append(4)\n",
+        "puzzle.append(7)\n",
+        "puzzle.append(0)\n",
+        "puzzle.append(5)\n",
+        "\n",
+        "#goal state\n",
+        "goal = []\n",
+        "\n",
+        "goal.append(1)\n",
+        "goal.append(2)\n",
+        "goal.append(3)\n",
+        "goal.append(8)\n",
+        "goal.append(0)\n",
+        "goal.append(4)\n",
+        "goal.append(7)\n",
+        "goal.append(6)\n",
+        "goal.append(5)\n",
+        "\n",
+        "\n",
+        "state, visited = evaluvate_misplaced(puzzle, goal)\n",
+        "bestpath = bestsolution(state)\n",
+        "print(str(bestpath).replace('[', ' ').replace(']', ''))\n",
+        "totalmoves = len(bestpath) - 1\n",
+        "print('\\nSteps to reach goal:',totalmoves)\n",
+        "visit = len(state) - visited\n",
+        "print('Total nodes visited: ',visit, \"\\n\")"
+      ],
+      "metadata": {
+        "id": "zQp-e6ZQbRWK",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c1c45b53-369a-4979-9253-2c99b6c8ecf8"
+      },
+      "id": "zQp-e6ZQbRWK",
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            " The 8 puzzle is solvable \n",
+            "\n",
+            "   2 8 3\n",
+            "   1 6 4\n",
+            "   7 0 5\n",
+            "\n",
+            "   2 8 3\n",
+            "   1 0 4\n",
+            "   7 6 5\n",
+            "\n",
+            "   2 0 3\n",
+            "   1 8 4\n",
+            "   7 6 5\n",
+            "\n",
+            "   0 2 3\n",
+            "   1 8 4\n",
+            "   7 6 5\n",
+            "\n",
+            "   1 2 3\n",
+            "   0 8 4\n",
+            "   7 6 5\n",
+            "\n",
+            "   1 2 3\n",
+            "   8 0 4\n",
+            "   7 6 5\n",
+            "\n",
+            "Steps to reach goal: 5\n",
+            "Total nodes visited:  6 \n",
+            "\n"
+          ]
+        }
       ]
     }
   ],
@@ -199,7 +403,8 @@
       "version": "3.9.15"
     },
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "nbformat": 4,
